# Document-Fingerprinting

./: CHANGELOG.md  Fingerprints.cabal  Readme.md  cabal.project
app/: Main.hs
src/: Fingerprint.hs  Query.hs  Token.hs
test/: Main.hs
