cabal-version:      2.4
name:               Fingerprints
version:            0.1.0.0
maintainer:         onweller@udel.edu
author:             Connor Onweller
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Fingerprint
        Token
        Query

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        transformers,
        extra,
        containers,
        split

executable Fingerprints
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        containers,
        directory,
        strict,
        Fingerprints

test-suite Fingerprints-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        Fingerprints,
        containers,
        hspec ^>=2.7.4
